# cfr

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
benches/: leduc.rs  liars_dice.rs
examples/: kuhn_poker.rs
src/: auto.rs  compact.rs  error.rs  gambit.rs  history.rs  json.rs  lazy.rs  lib.rs  main.rs  regret.rs  split.rs  splitmix.rs
src/solve/: data.rs  external.rs  mod.rs  multinomial.rs  vanilla.rs
tests/: kuhn.rs
