[package]
name = "cfr"
version = "0.1.0"
edition = "2021"
description = "Counterfactual regret minimization solver for two-player zero-sum incomplete-information games"
readme = "README.md"
repository = "https://github.com/erikbrinkman/cfr"
license = "MIT"
keywords = ["counterfactual", "regret", "incomplete", "information", "game"]

[dependencies]
by_address = "1.0"
clap = { version = "4.0", features = ["derive"], optional = true }
gambit-parser = { version = "0.1", optional = true }
indexmap = "1.9"
num = { version = "0.4", optional = true }
portable-atomic = { version = "0.3", features = ["float"] }
rand = "0.8"
rand_distr = "0.4"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = [ "binary" ]
binary = ["serde", "serde_json", "clap", "gambit-parser", "num"]

[lib]
name = "cfr"

[[bin]]
name = "cfr"
required-features = ["binary"]
