[package]
name = "cfr"
version = "0.3.2"
edition = "2021"
description = "Counterfactual regret minimization solver for two-player zero-sum incomplete-information games"
repository = "https://github.com/erikbrinkman/cfr"
license = "MIT"
keywords = ["counterfactual", "regret", "incomplete", "information", "game"]

[dependencies]
by_address = "1.0"
clap = { version = "4.0", features = ["derive", "wrap_help"], optional = true }
gambit-parser = { version = "0.2", optional = true }
indexmap = "1.9"
portable-atomic = { version = "0.3", features = ["float"] }
rand = "0.8"
rand_distr = "0.4"
num-traits = "0.2"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
logaddexp = "0.1.1"

[features]
default = [ "binary" ]
binary = ["serde", "serde_json", "clap", "gambit-parser"]

[lib]
name = "cfr"

[[bin]]
name = "cfr"
required-features = ["binary"]
